# projektMacierze

./: CMakeLists.txt  main.cpp
GaussPelnyWybor/: GaussPelnyWybor.cpp  GaussPelnyWybor.h
GaussPodstawowy/: GaussPodstawowy.cpp  GaussPodstawowy.h
GaussWyborKolumny/: GaussWyborKolumny.cpp  GaussWyborKolumny.h
MetodaGaussa/: MetodaGaussa.cpp  MetodaGaussa.h
